# trafficfluid-sim

./: CMakeLists.txt  README.md
data/xsd/: routeTypes.xsd
examples/highway/: autobahn.rou.xml  e1Detector_long_edge_0_0.xml  statistics.xml
examples/highwayonofframps/: gui-settings.cfg  ramps.net.xml  ramps.rou.xml
examples/highwayonofframpstwoway/: ramps.net.xml  ramps.rou.xml  ramps.sumocfg  ramps_t.net.xml
examples/ring_road/: e1Detector_edge_down_0_1.xml  e1Detector_edge_up_0_0.xml
kyriakos/src/: Controller.cpp  Controller.h  LaneFree.cpp  LaneFree2.cpp  LaneFree_linux.h  LaneFree_win.h
lane_free_control_library/: CMakeLists.txt
lane_free_control_library/src/: LaneFree.cpp  LaneFree.h  LaneFree_linux.h  LaneFree_win.h
lane_free_control_library/src/C_lib/: controller_api.c  controller_api.h  controller_g.c  controller_g.h  makefile
lane_free_control_library_test/src/: LaneFree.cpp  LaneFree_linux.h
lane_free_scenarios/highway/: autobahn.rou.xml  autobahn.sumocfg  detector.add.xml  e1Detector_long_edge_0_1.xml
lane_free_scenarios/highway_single_edge/: autobahn.rou.xml  autobahn5km.net.xml  e1Detector_long_edge_0_1.xml  statistics.xml
lane_free_scenarios/highwayonofframps/: ramps.rou.xml  statistics.xml
lane_free_scenarios/highwayonofframpstwoway/: ramps.rou.xml
lane_free_scenarios/ring_road/: additionals.add.xml  e1Detector_edge_down_0_1.xml  ring.net.xml  ring.rou.xml  ring.sumocfg  statistics.xml
lane_free_scenarios/ring_road_single_edge/: ring.net.xml  ring.rou.xml  ring.sumocfg  statistics.xml
lanefree_plugin_example/: .editorconfig  ALL_BUILD.vcxproj  CMakeLists.txt  lanefreeplugin.sln  libLaneFreePlugin.vcxproj  libLaneFreePlugin.vcxproj.filters
lanefree_plugin_example/libLaneFreePlugin.dir/Debug/: libLaneFreePlugin.dll.recipe
lanefree_plugin_example/libLaneFreePlugin.dir/Release/: libLaneFreePlugin.dll.recipe
lanefree_plugin_example/src/: Controller.cpp  Controller.h  LaneFree.cpp  LaneFree.h
rss_baseline/include/: libLaneFreePlugin_Export.h
rss_baseline/src/: LaneFree.cpp
scenarios_examples/01_highway_scenario/: detectors.add.xml  highway.rou.xml  highway.sumocfg
scenarios_examples/02_highway_boundary_shrink_scenario/: highway.rou.xml  highway.sumocfg
scenarios_examples/03_highway_flows_scenario/: highway.rou.xml
scenarios_examples/04_highway_detectors_scenario/: detectors.add.xml  highway.net.xml
scenarios_examples/05_ring_road_emulation_scenario/: highway.rou.xml
scenarios_examples/06_highway_on_off_ramps_scenario/: additionals.add.xml  custom-gui-settings.xml  ramps.net.xml  ramps.rou.xml
scenarios_examples/07_highway_bidirectional_internal_boundary_control_scenario/: additionals.add.xml  ramps.net.xml  ramps.rou.xml  ramps.sumocfg
scenarios_examples/08_roundabout_scenario/: custom_gui_settings.xml  detectors.add.xml  roundabout.net.xml  roundabout.rou.xml  (+1 more)
src/: CMakeLists.txt
src/microsim/cfmodels/: CMakeLists.txt  MSCFModel_LaneFree.cpp  MSCFModel_LaneFree.h
(+62 files in other folders)
